Cisf 3.1.1 No more limits on log-entry size.

--- a/test_browser.html
+++ b/test_browser.html
@@ -32,7 +32,6 @@ body
 
 <script type="text/javascript">
 
-
 testCisf ();
 function testCisf ()
 {
@@ -76,11 +75,16 @@ function testCisf ()
   return;
 
 function tell_tests_passd (s)
-{ s = `<h1>Cisf v. ${cisf.v} testCisf () passed.</h1>
+{ s = `<h1>Cisf v. ${cisf.v} testCisf () passed.</h1> `;
+
+if (typeof require === 'undefined')
+{ s += `
 <pre><tt>
 ${testCisf}
 </tt></pre>
 `;
+}
+
   console.log("");
   console.log (s);
   console.log("");
@@ -1273,6 +1277,7 @@ function fails()
 
 // Copyright 2018 Class Cloud LLC
 }
+
 
 </script>
 
