--- a/test_browser.html
+++ b/test_browser.html
@@ -29,8 +29,6 @@ body
 <script type="text/javascript">
 
 
-
-
 testCisf ();
 
 function testCisf ()
@@ -54,6 +52,8 @@ function testCisf ()
 */
 
   x       .bind (cisf) ();
+  xNot    .bind (cisf) ();
+
   ok      .bind (cisf) ();
   not     .bind (cisf) ();
   fails   .bind (cisf) ();
@@ -76,6 +76,8 @@ function testCisf ()
   w       .bind (cisf) ();
 
   tell_tests_passd ();
+
+
   return;
 
 function tell_tests_passd (s)
@@ -413,6 +415,25 @@ function A ()
 
   A     (        [String, Number], "good", 123   );
   fails (_=> A ( [String, Number], "good", "BAD" ));
+
+function myFunk (n)
+{ if (  ! (n instanceof Number) &&
+        (typeof n !== "number")
+     )
+  { throw "type-error"
+  }
+}
+function myFunk2 (n)
+{ x(n, Number);
+}
+
+
+let see = myFunk2 / 2;
+
+myFunk2 (123);
+
+myFunk (123);
+// myFunk( );
 
 
 
@@ -1544,6 +1565,24 @@ function x ()
   fails (() => x());
 }
 
+function xNot ()
+{
+  let xNot=this.xNot, x=this.x, ok=this.ok, fails=this.fails;
+
+  xNot (null);
+  xNot (undefined);
+
+  fails (_=> xNot ())          ;  // must have 1 arg
+  fails (_=> xNot (null, null));  // max 1 arg allowed
+  fails (_=> xNot (null, 1,2,3)); // max 1 arg allowed
+
+  fails (_=> xNot (false));
+  fails (_=> xNot (true));
+  fails (_=> xNot (0));
+  fails (_=> xNot (""));
+
+}
+
 // -----------------------------------------------
 
 function r ()
@@ -1654,9 +1693,18 @@ function warn()
 /* ----------------------------------------- */
 
 function err()
-{ let ok=this.ok,err=this.err, fails=this.fails;
+{ let ok=this.ok, err=this.err, fails=this.fails;
+
   let e  = fails ( _=> err ('something wrong') );
   let e2 = fails ( _=> err ('wrong type', TypeError) );
+
+  // err ('halts in debugger'); // YES
+  // Above would halt, whereas the fails-tests
+  // before it do not.
+
+  // ok (1 === 2);  // would halt in debugger
+
+
 }
 
 /**
@@ -1784,17 +1832,7 @@ function not( )
   not (false);
   fails ( _ => not ("false"));
   fails ( _ => not (true));
-  [ 0, 1, 5, "", "s", true, false, null, undefined
-  ] .map
-  ( b =>
-    { try {ok (b)} catch (e)
-      {  not (b)  ;
-      }
-      try {not (b)} catch (e)
-      {  ok (b)  ;
-      }
-    }
-  );
+
 }
 
 /**
